generatetest-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: generatetest-service-deployment
  namespace: intelligtest-namespace
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app/component: generatetest-service
  template:
    metadata:
      name: generatetest-service-pod
      labels:
        app/name: generatetest-service-pod
        app/component: generatetest-service
    spec:
      containers:
        - name: generatetest-service-container
          image: zaragozasebastian/generatetest-service-intelligtest:latest
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
          ports:
            - containerPort: 5001
