generatetest-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: generatetest-service
  namespace: intelligtest-namespace
spec:
  selector:
    app/component: generatetest-service
  ports:
    - port: 5001
      targetPort: 5001
  type: ClusterIP
